# sot-dyninv

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  sot-dyninv.pc.cmake
.travis/: build
doc/: CMakeLists.txt  Doxyfile.extra.in
include/: CMakeLists.txt
include/sot-dyninv/: commands-helper.h  controller-pd.h  dynamic-integrator.h  mal-to-eigen.h  pseudo-robot-dynamic.h  signal-helper.h  solver-op-space.h  stack-template.h  stack-template.t.cpp  task-dyn-pd.h  zmp-estimator.h
matlab/sot/: ddname.m  nmcolor.m  p.m
python/: CMakeLists.txt  MetaTask6d.py  ThreadInterruptibleLoop.py  attime.py  dyn2openhrp.py  dyndebug.py  dynreduced.py  dynwalk.py  history.py  kinedebug.py  kinesimple.py  kinewalk.py  matlab.py  matrix_util.py  meta_task_dyn_6d.py  meta_tasks_dyn.py  replay.py  robotSpecific.py  robotSpecific.py.cmake  robot_specific.py.cmake  script_shortcuts-deprec.py  viewer_helper.py  walktrans.py  wall.py  zmp_estimator.py
python/2013_coursens/: p105_demo.py  p105_demo_romeo.py  p105_walk.py  p124_sing.py  p96_sing.py  xp2_kineana.py
python/jumble/: dynwalk.py  kinedebug.py  kinemorisawa.py  kinesimple.py
python/jumble/romeo/: planche.py
python/mocap/: bigstep.py  footprint_parser.py  imit.py  mocap_parser.py  planche.py  replay_mocap.py  screenwash.py  slide.py  yoga.py
python/romeo/: planche.py
python/ros/: ros-dynromeo.py  ros-kineromeo.py  ros-p105_demo.py  ros-planche.py  ros-walkromeo.py  sot-concept.py
python/tools/: pose2openhrp.py  replay_dot_pos.py
python/unitests/: dynpg.py  dynreduced.py  kinesimple.py  kinewalk.py  step.py
python/unittests/: dynSimpleTest.py  dynromeo.py  kineromeo.py  kinesimple.py  kinewalk.py  walkromeo.py
src/: CMakeLists.txt  col-piv-qr-solve-in-place.h  commands-helper.h  contact-selecter.cpp  contact-selecter.h  controller-pd.cpp  controller-pd.h  dynamic-integrator.cpp  dynamic-integrator.h  entity-helper.h  feature-projected-line.cpp  feature-projected-line.h  mal-to-eigen.h  pseudo-robot-dynamic.cpp  pseudo-robot-dynamic.h  robot-dyn-simu.cpp  robot-dyn-simu.h  signal-helper.h  solver-dyn-red2.cpp  solver-dyn-red2.h  solver-dyn-reduced.cpp  solver-dyn-reduced.h  solver-kine.cpp  solver-kine.h  solver-op-space.cpp  solver-op-space.h  stack-template.h  stack-template.t.cpp  task-dyn-inequality.cpp  task-dyn-inequality.h  task-dyn-joint-limits.cpp  task-dyn-joint-limits.h  task-dyn-limits.cpp  task-dyn-limits.h  task-dyn-passing-point.cpp  task-dyn-passing-point.h  task-dyn-pd.cpp  task-dyn-pd.h  task-inequality.cpp  task-inequality.h  (+6 more)
src/dynamic_graph/sot/dyninv/: __init__.py  meta_task_dyn_6d.py  meta_task_dyn_passing_point.py  meta_tasks_dyn.py  meta_tasks_dyn_relative.py
unitTesting/: CMakeLists.txt  dummy.cpp  qrt.cpp
